[workspace]
members = ["cache_macro"]
[package]
name = "cache_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
cache_macro = { path = "./cache_macro" }
rand = "0.8.4"
